src/liquid/components/ld-checkbox/ld-checkbox.css
:host,
.ld-checkbox {
  /* layout */
  --ld-checkbox-size: 1.25rem;

  /* colors */
  --ld-checkbox-bg-col: var(--ld-col-wht);
  --ld-checkbox-bg-col-hover: var(--ld-col-neutral-010);
  --ld-checkbox-bg-col-active: var(--ld-col-neutral-050);
  --ld-checkbox-disabled-col: var(--ld-col-neutral-300);
  --ld-checkbox-disabled-bg-col: var(--ld-col-neutral-100);
  --ld-checkbox-dark-bg-col: var(--ld-col-neutral-050);
  --ld-checkbox-dark-bg-col-hover: var(--ld-col-neutral-100);
  --ld-checkbox-dark-bg-col-active: var(--ld-col-neutral-300);
  --ld-checkbox-checked-col: var(--ld-col-wht);
  --ld-checkbox-checked-col-active: var(--ld-col-wht);

  /* themable colors */
  --ld-checkbox-col: var(--ld-thm-primary);
  --ld-checkbox-col-hover: var(--ld-thm-primary-hover);
  --ld-checkbox-col-active: var(--ld-thm-primary-active);
  --ld-checkbox-col-focus: var(--ld-thm-primary-focus);
  --ld-checkbox-invalid-col: var(--ld-thm-error);
  --ld-checkbox-invalid-col-hover: var(--ld-thm-error-hover);
  --ld-checkbox-invalid-col-focus: var(--ld-thm-error-focus);
  --ld-checkbox-invalid-col-active: var(--ld-thm-error-active);
  --ld-checkbox-warn-col: var(--ld-thm-warning);
  --ld-checkbox-warn-col-hover: var(--ld-thm-warning-hover);
  --ld-checkbox-warn-col-focus: var(--ld-thm-warning-focus);
  --ld-checkbox-warn-col-active: var(--ld-thm-warning-active);
  --ld-checkbox-warn-checked-col: var(--ld-thm-warning-active);
  --ld-checkbox-warn-checked-col-active: var(--ld-thm-warning-hover);

  position: relative;
  display: inline-flex;
  flex-shrink: 0;
  width: var(--ld-checkbox-size);
  height: var(--ld-checkbox-size);
  min-width: auto !important;
  box-sizing: border-box;

  input {
    appearance: none;
    position: absolute;
    inset: 0;
    z-index: 1;
    width: 100%;
    height: 100%;
    margin: 0;

    &:checked {
      ~ .ld-checkbox__check {
        visibility: inherit;
      }
    }

    &:indeterminate {
      ~ .ld-checkbox__box::before {
        content: '';
        position: absolute;
        width: 50%;
        height: var(--ld-sp-2);
        border-radius: var(--ld-sp-2);
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);
        box-shadow: inherit;
        z-index: 1;
      }
    }

    &:where(:disabled),
    &:where([aria-disabled='true']) {
      ~ .ld-checkbox__check {
        color: var(--ld-checkbox-disabled-col);
      }
      ~ .ld-checkbox__box {
        background-color: transparent;
        box-shadow: inset 0 0 0 var(--ld-sp-2)
          var(--ld-checkbox-disabled-bg-col);
      }

      &:checked {
        ~ .ld-checkbox__box {
          background-color: var(--ld-checkbox-disabled-bg-col);
        }
      }
    }

    &:where(:not(:disabled, [aria-disabled='true'])) {
      cursor: pointer;

      ~ .ld-checkbox__check {
        color: var(--ld-checkbox-col-active);
      }
      ~ .ld-checkbox__box {
        box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col);
      }

      &:focus:focus-visible {
        ~ .ld-checkbox__box {
          background-color: transparent;
          box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col-focus);
        }
      }
      &:active,
      &:active:focus-visible {
        ~ .ld-checkbox__box {
          background-color: var(--ld-checkbox-bg-col-active);
          box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col-active);
        }
      }

      &:checked {
        ~ .ld-checkbox__check {
          color: var(--ld-checkbox-checked-col);
        }
        ~ .ld-checkbox__box {
          background-color: var(--ld-checkbox-col);
          box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col);
        }

        &:focus:focus-visible {
          ~ .ld-checkbox__check {
            color: var(--ld-checkbox-col-active);
          }
          ~ .ld-checkbox__box {
            background-color: var(--ld-checkbox-col-focus);
            box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col-focus);
          }
        }
        &:active,
        &:active:focus-visible {
          ~ .ld-checkbox__check {
            color: var(--ld-checkbox-checked-col-active);
          }
          ~ .ld-checkbox__box {
            background-color: var(--ld-checkbox-col-active);
            box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col-active);
          }
        }
      }
    }
  }

  :where(input:not(:disabled, input[aria-disabled='true'])) {
    ~ .ld-checkbox__box {
      background-color: var(--ld-checkbox-bg-col);
    }

    @media (hover: hover) {
      &:hover {
        ~ .ld-checkbox__box {
          background-color: var(--ld-checkbox-bg-col-hover);
          box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col-hover);
        }

        &:checked {
          ~ .ld-checkbox__check {
            color: var(--ld-checkbox-checked-col);
          }
          ~ .ld-checkbox__box {
            background-color: var(--ld-checkbox-col-hover);
            box-shadow: inset 0 0 0 var(--ld-sp-2) var(--ld-checkbox-col-hover);
          }
        }
      }
    }
  }
}

.ld-checkbox.ld-checkbox--dark,
:host(.ld-checkbox.ld-checkbox--dark) {
  :where(input) {
    &:not(:disabled, input[aria-disabled='true'], :checked) {
      ~ .ld-checkbox__box {
        background-color: var(--ld-checkbox-dark-bg-col);
      }

      @media (hover: hover) {
        &:hover {
          ~ .ld-checkbox__box {
            background-color: var(--ld-checkbox-dark-bg-col-hover);
          }
        }
      }

      &:active,
      &:active:focus-visible {
        ~ .ld-checkbox__box {
          background-color: var(--ld-checkbox-dark-bg-col-active);
        }
      }
    }
  }
}

.ld-checkbox__check {
  visibility: hidden;
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  pointer-events: none;
  z-index: 1;
}

.ld-checkbox__box {
  position: absolute;
  width: 100%;
  height: 100%;
  pointer-events: none;
}

:host,
.ld-checkbox,
.ld-checkbox__box {
  border-radius: var(--ld-br-m);
}

:host(.ld-checkbox--highlight),
.ld-checkbox--highlight {
  --ld-checkbox-col: var(--ld-checkbox-warn-col);
  --ld-checkbox-col-hover: var(--ld-checkbox-warn-col-hover);
  --ld-checkbox-col-focus: var(--ld-checkbox-warn-col-focus);
  --ld-checkbox-col-active: var(--ld-checkbox-warn-col-active);
  --ld-checkbox-checked-col: var(--ld-checkbox-warn-checked-col);
  --ld-checkbox-checked-col-active: var(--ld-checkbox-warn-checked-col-active);
}

:host(.ld-checkbox--invalid),
:host(.ld-checkbox--danger),
.ld-checkbox--invalid,
.ld-checkbox--danger {
  --ld-checkbox-col: var(--ld-checkbox-invalid-col);
  --ld-checkbox-col-hover: var(--ld-checkbox-invalid-col-hover);
  --ld-checkbox-col-active: var(--ld-checkbox-invalid-col-active);
  --ld-checkbox-col-focus: var(--ld-checkbox-invalid-col-focus);
}

